--- a/index.html
+++ b/index.html
@@ -34,8 +34,6 @@
                 <p>
                     Pinos es parte del programa <a href="https://www.gob.mx/sectur/articulos/pueblos-magicos-206528"><b><i>Pueblos Mágicos</i></b></a> desde 2012.
                 </p>
-                <br>
-                <iframe width="450" height="300" src="https://youtu.be/UI0ypVOW4Sw"></iframe>
             </article>
             <article class="article">
                 <br>
@@ -70,6 +68,8 @@
                 <p>
                     Ubicada a 1:15 h de San Luis Potosí; 1:45 h de Zacatecas; 2 h de Aguascalientes; y 3 h de Guanajuato.
                 </p>
+                <br>
+                <iframe width="450" height="350" src="http://gaia.inegi.org.mx/mdm6/?v=bGF0OjIyLjI5NTM2LGxvbjotMTAxLjU3NDUxLHo6MTAsbDpjMTExc2VydmljaW9zfHRjMTExc2VydmljaW9z"></iframe>
             </article>
             <article class="article">
                 <br>
